WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304765
[AutoFill Debugging] Text extraction may hang indefinitely when invoked from system daemons
https://bugs.webkit.org/show_bug.cgi?id=304765
Summary
[AutoFill Debugging] Text extraction may hang indefinitely when invoked from ...
Wenson Hsieh
Reported
2025-12-29 14:23:52 PST
rdar://167099858
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-12-29 14:55:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55923
EWS
Comment 2
2026-01-02 10:15:22 PST
Committed
305048@main
(3001d64b831c): <
https://commits.webkit.org/305048@main
> Reviewed commits have been landed. Closing PR #55923 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug