Source/WebKit/UIProcess/WebProcessActivityState.cpp
@@ -75,6 +75,36 @@ void WebProcessActivityState::takeVisibleActivity()
 #endif
 }
 
+void WebProcessActivityState::takeTextExtractionAssertion()
+{
+    auto page = WTF::visit([](auto&& weakPageRef) -> Variant<WeakPtr<WebPageProxy>, WeakPtr<RemotePageProxy>> {
+        return weakPageRef.get();
+    }, m_page);
+
+    auto processID = protectedProcess()->processID();
+    Ref assertion = ProcessAssertion::create(protectedProcess(), "WebKit text extraction"_s, ProcessAssertionType::Background);
+    m_textExtractionAssertion = assertion.copyRef();
+    assertion->setInvalidationHandler([processID, weakPage = page] {
+        WTF::visit([processID](auto&& weakPage) {
+            RefPtr page = weakPage.get();
+            if (!page)
+                return;
+
+#if RELEASE_LOG_DISABLED
+            UNUSED_PARAM(processID);
+#else
+            RELEASE_LOG(ProcessSuspension, "Text extraction assertion is invalidated (PID=%d)", processID);
+#endif
+            page->processActivityState().m_textExtractionAssertion = nullptr;
+        }, weakPage);
+    });
+}
+
+void WebProcessActivityState::dropTextExtractionAssertion()
+{
+    m_textExtractionAssertion = nullptr;
+}
+
 void WebProcessActivityState::takeAudibleActivity()
 {
     m_isAudibleActivity = protectedProcess()->protectedThrottler()->foregroundActivity("View is playing audio"_s);
